--- a/index.html
+++ b/index.html
@@ -9,6 +9,54 @@
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
+		<div class="row barra-superior callout">
+			<div class="large-4 medium-4 small-12 columns">
+				<div class="row">
+					<div class="small-12 columns title">
+						<h1>Entre Platillos</h1>
+					</div>
+					<div class="small-6 small-offset-6 slogan">
+						<h3>Saboreando al mundo</h3>
+					</div>
+				</div>
+			</div>
+			<div class="large-8 medium-8 small-12 columns">
+		
+			</div>
+		</div>
+
+		<div class="row body-container">
+			<div class="large-4 medium-4 small-12 columns">
+				<div class="row buscador callout">
+					<div class="small-2 colums">
+						<i class="step fi-magnifying-glass lupa"></i>
+					</div>
+					<div class="small-10 columns">
+						<input type="search" name="Buscador" placeholder="Buscar">
+					</div>
+				</div>
+
+				<div class="row menu-vertical">
+					<div class="small-11 offset-1 columns">
+						<ul class="vertical menu">
+							<li><a href="">Inicio</a></li>
+							<li><a href="">Mi plato perfecto</a></li>
+							<li><a href="">Mis recetas</a></li>
+							<li><a href="">Favoritos</a></li>		
+						</ul>
+						
+					</div>
+					
+
+				</div>
+			</div>
+			<div class="large-8 medium-8 small-12 columns callout">
+
+
+			</div>
+
+		</div>
+		
 
 
 
