--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 			</div>
 		</div>
 
-		<div class="row body-container">
-			<div class="large-4 medium-4 small-12 columns">
-				<div class="row buscador callout">
+		<div class="row body-container callout">
+			<div class="large-4 medium-4 small-12 columns columna-izq">
+				<div class="row callout buscador">
 					<div class="small-2 colums">
 						<i class="step fi-magnifying-glass lupa"></i>
 					</div>
@@ -36,15 +36,15 @@
 					</div>
 				</div>
 
-				<div class="row menu-vertical callout">
-					<div class="small-12 columns callout">
+				<div class="row menu-vertical">
+					<div class="small-12 columns">
 						<ul class="vertical menu">
 							<li><a href="">Inicio</a></li>
 							<li><a href="">Mi plato perfecto</a></li>
 							<li><a href="">Mis recetas</a></li>
 						</ul>
 					</div>
-					<div class="row favoritos callout">
+					<div class="row favoritos">
 						<h5>Favoritos</h5>
 						<div class="row fila-1">
 							<div class="small-4 columns favorito">
@@ -72,7 +72,7 @@
 						</div>
 					</div>
 					<div class="row historial">
-						<div class="small-12 columns callout">
+						<div class="small-12 columns">
 							<h5>Historial:</h5>
 							<ul class="vertical menu">
 								<li><a href="" class="button expanded">Ideas para cenas romanticas</a></li>
@@ -92,7 +92,7 @@
 			</div>
 
 
-			<div class="large-8 medium-8 small-12 columns callout">
+			<div class="large-8 medium-8 small-12 columns">
 
 				<div class="row post-1">
 					<div class="small-12 columns">
@@ -150,11 +150,6 @@
 
 		</div>
 		
-
-
-
-
-
 
 <script type="text/javascript" src="js/foundation.min.js"></script>
 <script type="text/javascript" src="js/jquery.js"></script>
