finalizacion de proyecto

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 					<div class="small-12 columns title">
 						<h1>Entre Platillos</h1>
 					</div>
-					<div class="small-6 small-offset-6 slogan">
+					<div class="small-7 small-offset-5 slogan">
 						<h3>Saboreando al mundo</h3>
 					</div>
 				</div>
@@ -26,7 +26,7 @@
 		</div>
 
 		<div class="row body-container callout">
-			<div class="large-4 medium-4 small-12 columns columna-izq">
+			<div class="large-4 medium-4 small-12 columns">
 				<div class="row callout buscador">
 					<div class="small-2 colums">
 						<i class="step fi-magnifying-glass lupa"></i>
@@ -36,7 +36,7 @@
 					</div>
 				</div>
 
-				<div class="row menu-vertical">
+				<div class="row menu-vertical callout  izq-columna">
 					<div class="small-12 columns">
 						<ul class="vertical menu">
 							<li><a href="">Inicio</a></li>
@@ -44,7 +44,7 @@
 							<li><a href="">Mis recetas</a></li>
 						</ul>
 					</div>
-					<div class="row favoritos">
+					<div class="row favoritos callout">
 						<h5>Favoritos</h5>
 						<div class="row fila-1">
 							<div class="small-4 columns favorito">
@@ -71,8 +71,8 @@
 							
 						</div>
 					</div>
-					<div class="row historial">
-						<div class="small-12 columns">
+					<div class="row historial callout">
+						<div class="small-12 columns ">
 							<h5>Historial:</h5>
 							<ul class="vertical menu">
 								<li><a href="" class="button expanded">Ideas para cenas romanticas</a></li>
@@ -92,7 +92,7 @@
 			</div>
 
 
-			<div class="large-8 medium-8 small-12 columns">
+			<div class="large-8 medium-8 small-12 columns der-columna callout">
 
 				<div class="row post-1">
 					<div class="small-12 columns">
